--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+@import '~antd/dist/antd.css';
+@import './styles/App.css';
+@import './styles/HeadBar.css';
+@import './styles/Main.css';
+@import './styles/Login.css';
+@import './styles/Register.css';
+@import './styles/Home.css';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
